--- a/energy.html
+++ b/energy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="createjs-2015.11.26.min.js"></script>
+    <script src="../createjs-2015.11.26.min.js"></script>
     <script src="energy.js"></script>
     <style>
         #boks {
